hphp/hack/test/extended_reasons/union_join_point.php.exp
error: Typing[4110] Invalid return type

File union_join_point.php, line 12, character 10 - line 12, character 11:

  7 |     $z = $x;
  8 |   } else{
  9 |     $z = $y;
 10 |   }
 11 | 
 12 |   return »$z«;
 13 | }

Expected A

File union_join_point.php, line 5, character 37 - line 5, character 37:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, B $y): »A« {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

But got B

File union_join_point.php, line 5, character 30 - line 5, character 30:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, »B« $y): A {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

Here's why:


  Step 1 of 2                                                                   

I started by checking this subtype relationship.

The subtype comes from this join point

File union_join_point.php, line 6, character 3 - line 10, character 3:

 5 | function foo(bool  $p, A $x, B $y): A {
 6 |   »if($p){
 7 |     $z = $x;
 8 |   } else{
 9 |     $z = $y;
10 |   }«
11 | 
12 |   return $z;
13 | }

and flows into this expression

File union_join_point.php, line 12, character 10 - line 12, character 11:

  7 |     $z = $x;
  8 |   } else{
  9 |     $z = $y;
 10 |   }
 11 | 
 12 |   return »$z«;
 13 | }

as the type of the local variable

which itself flows into this expression

File union_join_point.php, line 12, character 3 - line 12, character 12:

  7 |     $z = $x;
  8 |   } else{
  9 |     $z = $y;
 10 |   }
 11 | 
 12 |   »return $z;«
 13 | }

because it is used in a return position

The supertype comes from this hint

File union_join_point.php, line 5, character 37 - line 5, character 37:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, B $y): »A« {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

which is defined here

File union_join_point.php, line 2, character 7 - line 2, character 7:

 1 | <?hh
 2 | class »A« {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, B $y): A {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{


  Step 2 of 2                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this hint

File union_join_point.php, line 5, character 30 - line 5, character 30:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, »B« $y): A {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

which is defined here

File union_join_point.php, line 3, character 7 - line 3, character 7:

 1 | <?hh
 2 | class A {}
 3 | class »B« {}
 4 | 
 5 | function foo(bool  $p, A $x, B $y): A {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

and flows into this expression

File union_join_point.php, line 5, character 32 - line 5, character 33:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, B »$y«): A {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

as the parameter hint

which itself flows into this expression

File union_join_point.php, line 9, character 10 - line 9, character 11:

 7 |     $z = $x;
 8 |   } else{
 9 |     $z = »$y«;
10 |   }
11 | 
12 |   return $z;
13 | }

as the type of the local variable

which itself flows into this expression

File union_join_point.php, line 9, character 5 - line 9, character 6:

 7 |     $z = $x;
 8 |   } else{
 9 |     »$z« = $y;
10 |   }
11 | 
12 |   return $z;
13 | }

via an assignment

The supertype is the same as before.

File union_join_point.php, line 5, character 37 - line 5, character 37:

 1 | <?hh
 2 | class A {}
 3 | class B {}
 4 | 
 5 | function foo(bool  $p, A $x, B $y): »A« {
 6 |   if($p){
 7 |     $z = $x;
 8 |   } else{

1 error found
