hphp/hack/test/extended_reasons/union_join_point.php
<?hh
class A {}
class B {}

function foo(bool  $p, A $x, B $y): A {
  if($p){
    $z = $x;
  } else{
    $z = $y;
  }

  return $z;
}
